--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "serve": "^1.4.0"
   },
   "scripts": {
-    "start": "serve --port 52587"
+    "start": "serve --port 52587",
+    "build": "babel --presets es2015 scripts/main.es6.js -o scripts/main.es5.js -s true"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
