update port number for Heroku

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "chrome-es2015-codelab",
   "description": "ES2015 Codelab",
   "license": "Apache-2.0",
-  "author": "Google",
+  "author": "Cathy Li",
   "repository": "googlecodelabs/chrome-es2015",
   "devDependencies": {
     "serve": "^1.4.0"
   },
   "scripts": {
-    "start": "serve --port 52587",
+    // "start": "serve --port 52587",
+    "start": "serve --port process.env.PORT  || serve --port 52587",
     "build": "babel --presets es2015 scripts/main.es6.js -o scripts/main.es5.js -s true"
   },
   "dependencies": {
